<resources>
    <string name="app_name">THUÊ TỐT</string>
    <string name="no">No</string>
    <string name="facebook_app_id">305092856672358</string>
    <string name="fb_login_protocol_scheme">fb305092856672358</string>
    <string name="google_maps_key">AIzaSyDBfdxli_eMNGalQDD19n2r0d4807UYlJQ</string>
    <string name="validation_key">AIzaSyDbZnEq9-lpTvAk41v_fSe_ijKRIIj6R6Y</string>
    <string name="lg_hint_email">Email</string>
    <string name="lg_hint_pass">Password</string>
    <string name="lg_btn_login">Login</string>
    <string name="lg_btn_forgot">Forgot Password</string>
    <string name="lg_btn_noaccount">Dont have account ?</string>
    <string name="st_camera">Camera</string>
    <string name="st_gallery">Gallery</string>
    <string name="re_title_register">Register</string>
    <string name="re_text_haveaccount">Have account ? Login now</string>
    <string name="re_hint_name">Name</string>
    <string name="re_hint_email">Email</string>
    <string name="re_hint_repass">Refill Password</string>
    <string name="re_btn_confirm">Confirm</string>
    <string name="people_participation_detail_event">Participation person</string>
    <string name="people_care_detail_event">Participation person</string>
    <string name="created_event">has created the event</string>
    <string name="participation_detail_event">Partici..</string>
    <string name="time_event">Time:</string>
    <string name="day_event">Date:</string>
    <string name="cancelnot">Cancel</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="in">- in</string>
    <string name="you">You </string>
    <string name="youand">You and </string>
    <string name="delete_comment">Are you sure you want to delete this comment?</string>
    <string name="delete_product">Are you sure you want to delete this product?</string>
    <string name="product_notexit">Sorry, This product has been removed!</string>
    <string name="comment_notexit">Sorry, This Comment has been removed!</string>
    <string name="title_comment">Delete Comment</string>
    <string name="detail_comment">Detail comment</string>
    <string name="view">views</string>
    <string name="money">Money</string>
    <string name="delete_event">Do do want delete event?</string>
    <string name="delete_title_event">Delete Event</string>
    <string name="remain_time_minute">%1$d minutes left</string>
    <string name="remain_time_second">%1$d seconds left</string>
    <string name="uploading" formatted="false">Uploading %d of %d</string>
    <string name="uploaded_title" formatted="false">%d of %d photos</string>
    <string name="tedbottompicker_title">Select Image</string>
    <string name="no_image">No Image</string>
    <string name="done">Done</string>
    <string name="select_max_count">Already %1$d images selected</string>
    <string name="select_min_count">You have to choice %1$d images</string>
    <string name="gallery_num">%s photos</string>
    <string name="all_photo">All photos</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="btn_signin">Sign in</string>
    <string name="btn_join">Sign up</string>
    <string name="btn_forgot">Forgot password</string>
    <string name="btn_signup">Don\'t have account ? CLICK HERE</string>
    <string name="btn_signup_click">CLICK HERE</string>
    <string name="btn_backtologin">Already have account ? CLICK HERE</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_repassword">Re-password</string>
    <string name="hint_password">Password</string>
    <string name="tv_social_login">Or</string>
    <string name="message_signin">Join success</string>
    <string name="title_activity_home">THUÊ TỐT</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_category">Category</string>
    <string name="nav_Profile">Profile</string>
    <string name="server_unreachable">Oops! Something went wrong.\nPlease check your internet connection.</string>
    <string name="try_again">Try Again?</string>
    <string name="loading">Loading&#8230;</string>
    <string name="action_grid">Grid View</string>
    <string name="action_list">List View</string>
    <string name="action_compact">Compact View</string>
    <string name="action_search">Search</string>
    <string name="stt_location">Select Province/City</string>
    <string name="stt_location2">Select Area</string>
    <string name="stt_category">Select Category</string>
    <string name="stt_search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_profile_">DetailProfile_Activity</string>
    <string name="sp_saved">Product saved</string>
    <string name="txt_mess">Message</string>
    <string name="st_errpass">Should not be empty !</string>
    <string name="st_errPhone">Invalid phone number !</string>
    <string name="st_errpass2">Should not be empty or less than 6 character !</string>
    <string name="st_errpass3">Should not be empty or repassword not match !</string>
    <string name="st_errpass4">Should not be empty or less than 8 character !</string>
    <string name="time_new">just now</string>
    <string name="ac_add">Add product</string>
    <string name="noselect">No select</string>
    <string name="per_deni">Permission Denied</string>
    <string name="per_turnon">If you reject permission,you can not use this service
        Please turn on permissions at [Setting] > [Permission]</string>
    <string name="up_success">Uploaded successfully</string>
    <string name="choose_image">Please choose image</string>
    <string name="input">Please input</string>
    <string name="change_pass">Change password</string>
    <string name="joined">Joined</string>
    <string name="joined_have">Joined and have</string>
    <string name="people_inroom">people in room</string>
    <string name="edit_product">Edit product</string>
    <string name="up_fail">Upload failed ! Please input all information !</string>
    <string name="invalid_email">Invalid email address !</string>
    <string name="success">Success !</string>
    <string name="enter_valid">Enter valid details !</string>
    <string name="location">Location</string>
    <string name="started">Started</string>
    <string name="err">Have error !</string>
    <string name="err_imageSize">Size is not invalid, please choose another image !</string>
    <string name="cate_vehicle">Vehicle</string>
    <string name="cate_electronic">Electronic</string>
    <string name="cate_fashion">Fashion and Personal belongings</string>
    <string name="cate_house">House</string>
    <string name="cate_motherandbaby">Mother and baby</string>
    <string name="cate_furniture">Furniture</string>
    <string name="cate_entertaiment">Entertaiment and Sport</string>
    <string name="cate_office">Office and agriculture</string>
    <string name="cate_other">Other</string>
    <string name="latest">Latest</string>
    <string name="latest_des">Sort by latest product upload date</string>
    <string name="popular">Most popular</string>
    <string name="popular_des">Sort by product with the most views</string>
    <string name="price_low">Lowest price</string>
    <string name="price_low_des">Sort by product have lowest price</string>
    <string name="price_high">Lowest price</string>
    <string name="price_high_des">Sort by product have highest price</string>
    <string name="inbox_send"> sent 1 image</string>
    <string name="inbox_send1">You sent 1 image</string>
    <string name="rent">For rent</string>
    <string name="need_rent">Wanna rent</string>
    <string name="renting">Be hiring</string>
    <string name="rented">Be hired</string>
    <string name="need_rent1">Was rented</string>
    <string name="renting1">Are renting</string>
    <string name="delete_success">Delete product successfully</string>
    <string name="edit_success">Edit product successfully</string>
    <string name="changepass_success">Change password successfully</string>
    <string name="updatemoney_success">Update info successfully</string>
    <string name="changeinfo_success">Change info successfully</string>
    <string name="update_phonenumber_success">Change info successfully</string>
    <string name="pass_notmatch">Password do not match or empty!</string>
    <string name="max_city">Cannot select over 5 city!</string>
    <string name="max_cate">Cannot select over 5 category!</string>
    <string name="sms_fail">SMS failed, please try again later.</string>
    <string name="err_repass">Passwords do not match or empty!</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="more_comment">See more</string>
    <string name="title">Title</string>
    <string name="txt_price">Price</string>
    <string name="txt_time">Time</string>
    <string name="txt_number">Number</string>
    <string name="txt_cate">Category</string>
    <string name="txt_address">Address</string>
    <string name="txt_des">Description</string>
    <string name="txt_oldpass">Old password</string>
    <string name="txt_newpass">New password</string>
    <string name="txt_confirm_newpass">Confirm new password</string>
    <string name="btn_change">Change</string>
    <string name="txt_inputmess">Input message</string>
    <string name="txt_stt">Status</string>
    <string name="btn_ok">OK</string>
    <string name="no_comment">No comment</string>
    <string name="write_comment">Write a comment</string>
    <string name="send">Send</string>
    <string name="pro_not_found">Product not found</string>
    <string name="txt_changeacc">Change information</string>
    <string name="txt_newname">Input new name</string>
    <string name="txt_newphone">Input new phone number</string>
    <string name="txt_phone">Phone number</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_or">OR</string>
    <string name="txt_phonenumber">Input phone number</string>
    <string name="txt_filtercity">Filter by city</string>
    <string name="txt_filtercate">Filter by category</string>
    <string name="txt_productlist">Product list</string>
    <string name="txt_productsave">Product saved</string>
    <string name="txt_seemore">See more</string>
    <string name="txt_addcomment">Add comment</string>
    <string name="txt_sortby">Sort by :</string>
    <string name="txt_per">for</string>
    <string name="txt_call">Call</string>
    <string name="txt_sms">SMS</string>
    <string name="txt_chat">Chat online</string>
    <string name="txt_share">Share</string>
    <string name="txt_slogan">Hire love - Give value</string>
    <string name="txt_checkmail">Please check phone number !</string>
    <string name="txt_nodata">Do not have a conversation !</string>
    <string name="txt_finish">Finish !</string>
    <string name="txt_havecm">Have comments in your product !</string>
    <string name="nav_about">About us</string>
    <string name="nav_logout">Logout</string>
    <string name="vr_title">Verify your phone number</string>
    <string name="vr_send">We send you a text with a code. The text is free, you are not charged for it.</string>
    <string name="vr_step1">Step 1: </string>
    <string name="vr_step2">Step 2: </string>
    <string name="txt_phonenumber_referral">Input phone number referral</string>
</resources>