<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_phonenumber_referral"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/edt_phonenumber"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:inputType="phone"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_radius"
        android:paddingLeft="15dp"

        />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"

        >

        <ProgressBar
            android:id="@+id/progressBar_phonenumber"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/btn_accept_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/roundbutton"
            android:text="@string/btn_accept"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/txt_or"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/btn_cancel_phonenumber"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/roundbutton_cancel"
        android:text="@string/btn_cancel"
        android:textColor="@color/white"/>


</LinearLayout>