<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linCate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:id="@+id/linMotobike"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@color/transparent"
            android:layout_weight="33.33"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/cate_vehicle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/cate_vehicle"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linelectronic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/cate_electronic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/cate_electronic"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linfashion"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/cate_fashion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/cate_fashion"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linhome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/cate_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/cate_house"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linmombaby"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/mother" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/cate_motherandbaby"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lingdnt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/cate_furniture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/cate_furniture"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/linshort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/cup"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cate_entertaiment"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linvpnn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/printer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cate_office"
                android:textSize="13dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_margin="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lindeff"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="33.33"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp">
            <!--<ImageView-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:background="@drawable/service"/>-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/cate_other"
                android:textColor="@color/black"
                android:textSize="13dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>


