<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_singin"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="@dimen/dist_large"
        android:layout_marginLeft="@dimen/dist_large"
        android:layout_marginRight="@dimen/dist_large"
        android:layout_marginStart="@dimen/dist_large"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText

                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/account"
                android:drawablePadding="10dp"
                android:drawableStart="@mipmap/account"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/btn_color_login"
                android:textColorLink="@color/btn_color_login"
                android:textSize="15sp"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layoutpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText

                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableLeft="@mipmap/lock"
                android:drawablePadding="10dp"
                android:drawableStart="@mipmap/lock"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/btn_color_login"
                android:textColorLink="@color/btn_color_login"
                android:textSize="15sp"

                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_forgot"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_size_large"

            android:layout_gravity="end"
            android:background="@color/transparent"
            android:text="@string/btn_forgot"
            android:textAllCaps="false"
            android:textColor="@color/btn_color_login" />
    </LinearLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/layout_input"
        android:layout_centerInParent="true"
        android:background="@drawable/logo" />

    <Button
        android:id="@+id/btn_singin"
        android:layout_width="150dp"
        android:layout_height="@dimen/button_size_large"
        android:layout_above="@+id/layout_social_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/button_size_large"
        android:background="@drawable/rectanglebutton"
        android:text="@string/btn_signin"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/layout_text_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_social_button"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/dist_medium"
            android:layout_marginLeft="@dimen/dist_medium"
            android:layout_marginRight="@dimen/dist_medium"
            android:layout_marginStart="@dimen/dist_medium"
            android:text="@string/tv_social_login"
            android:textColor="@color/btn_color_login" />

        <View
            android:layout_width="wrap_content"

            android:layout_height="1dp"

            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dist_large"
            android:layout_marginStart="@dimen/dist_large"
            android:layout_toLeftOf="@id/tv_text"
            android:layout_toStartOf="@id/tv_text"
            android:background="@color/btn_color_login" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_centerInParent="true"

            android:layout_marginEnd="@dimen/dist_large"

            android:layout_marginRight="@dimen/dist_large"
            android:layout_toEndOf="@id/tv_text"
            android:layout_toRightOf="@id/tv_text"
            android:background="@color/btn_color_login" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_social_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_signup"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/btn_facebook"
            android:background="@drawable/facebook_button" />

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:id="@+id/btn_google"
            android:background="@drawable/google_button" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size_large"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/transparent"
        android:text="@string/btn_signup"
        android:textAllCaps="false"
        android:textColor="@color/btn_color_login" />
</RelativeLayout>